compiler/lib/test/parser_golden/fstring_unclosed_brace.golden
ERROR: 1:2:
  |
1 | f"Unclosed brace: {name
  |  ^^^
unexpected ""Un"
expecting "%=", "&=", "**=", "*=", "+=", "-=", "//=", "/=", "<<=", ">>=", "@=", "^=", "|=", ':', '=', call arguments, slice/index expression, or comma
